# eolo

modules/bag/: CMakeLists.txt
modules/bag/examples/: example.cpp
modules/bag/include/eolo/bag/: bag.h
modules/bag/proto/: CMakeLists.txt  buf.yaml
modules/bag/proto/eolo/bag/proto/: bag.proto
modules/bag/src/: bag.cpp
modules/bag/tests/: tests.cpp
modules/serdes/include/eolo/serdes/: serdes.h
modules/utils/include/eolo/utils/: utils.h
modules/utils/src/: version_impl.h
